Part 1 almost done. Need tabulation. Need to check the percentile formula : =/= from pandas.describe()

--- a/DSLR.ipynb
+++ b/DSLR.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8b596b71",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import math\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "322102aa",
    "metadata": {},
    "outputs": [],
@@ -31,8 +32,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e99c71a",
+   "metadata": {},
+   "source": [
+    "### This should be the output of our first program\n",
+    "It reads the datasets and gives us count, mean, std, min, max, percentiles for each feature"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "bc7dd0ae",
    "metadata": {},
    "outputs": [
@@ -256,7 +266,7 @@
        "max                     3.056546  -225.428140   279.070000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,6 +274,366 @@
    "source": [
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "38cf6f72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_decimal(number, decimal):\n",
+    "    return format(number, f'.{decimal}f')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3b245ab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Index', 'Arithmancy', 'Astronomy', 'Herbology', 'Defense Against the Dark Arts', 'Divination', 'Muggle Studies', 'Ancient Runes', 'History of Magic', 'Transfiguration', 'Potions', 'Care of Magical Creatures', 'Charms', 'Flying']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    We need a list of the features to describe. \n",
+    "    All the non-numerical features can be left out. \n",
+    "\"\"\"\n",
+    "\n",
+    "features = list(df.columns)\n",
+    "\n",
+    "features = [f for f in features if np.issubdtype(df[f].dtype, np.number)]\n",
+    "\n",
+    "print(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1bf77e9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COUNT:\n",
+      "\n",
+      "Index : 1600.000000\n",
+      "Arithmancy : 1566.000000\n",
+      "Astronomy : 1568.000000\n",
+      "Herbology : 1567.000000\n",
+      "Defense Against the Dark Arts : 1569.000000\n",
+      "Divination : 1561.000000\n",
+      "Muggle Studies : 1565.000000\n",
+      "Ancient Runes : 1565.000000\n",
+      "History of Magic : 1557.000000\n",
+      "Transfiguration : 1566.000000\n",
+      "Potions : 1570.000000\n",
+      "Care of Magical Creatures : 1560.000000\n",
+      "Charms : 1600.000000\n",
+      "Flying : 1600.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count(feature : str) -> int:\n",
+    "    \"\"\"\n",
+    "       Count non-NA (NaN, NaT, None) cells for the requested feature.\n",
+    "    \"\"\"\n",
+    "    return len(df[feature].dropna())\n",
+    "\n",
+    "\n",
+    "print(\"COUNT:\\n\")\n",
+    "for feature in features:\n",
+    "    print(feature, \":\", format_decimal(count(feature), 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "62a47cba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEAN :\n",
+      "\n",
+      "Index : 799.500000\n",
+      "Arithmancy : 49634.570243\n",
+      "Astronomy : 39.797131\n",
+      "Herbology : 1.141020\n",
+      "Defense Against the Dark Arts : -0.387863\n",
+      "Divination : 3.153910\n",
+      "Muggle Studies : -224.589915\n",
+      "Ancient Runes : 495.747970\n",
+      "History of Magic : 2.963095\n",
+      "Transfiguration : 1030.096946\n",
+      "Potions : 5.950373\n",
+      "Care of Magical Creatures : -0.053427\n",
+      "Charms : -243.374409\n",
+      "Flying : 21.958012\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mean(feature : str) -> float:\n",
+    "    \"\"\"\n",
+    "        Returns the mean for the values of the requested feature.\n",
+    "    \"\"\"\n",
+    "    return (sum(df[feature].dropna()) / count(feature))\n",
+    "\n",
+    "print(\"MEAN :\\n\")\n",
+    "for feature in features:\n",
+    "    print(feature, \":\", format_decimal(mean(feature),6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0265ab90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STD :\n",
+      "\n",
+      "Index : 462.024530\n",
+      "Arithmancy : 16679.806036\n",
+      "Astronomy : 520.298268\n",
+      "Herbology : 5.219682\n",
+      "Defense Against the Dark Arts : 5.212794\n",
+      "Divination : 4.155301\n",
+      "Muggle Studies : 486.344840\n",
+      "Ancient Runes : 106.285165\n",
+      "History of Magic : 4.425775\n",
+      "Transfiguration : 44.125116\n",
+      "Potions : 3.147854\n",
+      "Care of Magical Creatures : 0.971457\n",
+      "Charms : 8.783640\n",
+      "Flying : 97.631602\n"
+     ]
+    }
+   ],
+   "source": [
+    "def variance(feature : str) -> float:\n",
+    "    mean_val = mean(feature)\n",
+    "    numerator = 0\n",
+    "    for i in df[feature].dropna():\n",
+    "        numerator += (i - mean_val) ** 2\n",
+    "    return (numerator/(count(feature) - 1))\n",
+    "\n",
+    "def std(feature : str) -> float:\n",
+    "    \"\"\"\n",
+    "        Returns sample standard deviation for the requested feature.\n",
+    "    \"\"\"\n",
+    "    return math.sqrt(variance(feature))\n",
+    "\n",
+    "print(\"STD :\\n\")\n",
+    "for feature in features:\n",
+    "    print(feature, \":\", format_decimal(std(feature),6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dc8da66d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MIN :\n",
+      "\n",
+      "Index : 0.000000\n",
+      "Arithmancy : -24370.000000\n",
+      "Astronomy : -966.740546\n",
+      "Herbology : -10.295663\n",
+      "Defense Against the Dark Arts : -10.162119\n",
+      "Divination : -8.727000\n",
+      "Muggle Studies : -1086.496835\n",
+      "Ancient Runes : 283.869609\n",
+      "History of Magic : -8.858993\n",
+      "Transfiguration : 906.627320\n",
+      "Potions : -4.697484\n",
+      "Care of Magical Creatures : -3.313676\n",
+      "Charms : -261.048920\n",
+      "Flying : -181.470000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ft_min(feature : str) -> float:\n",
+    "    min = np.nan\n",
+    "    for i in df[feature].dropna():\n",
+    "        min = min if i > min else i \n",
+    "    return min\n",
+    "\n",
+    "print(\"MIN :\\n\")\n",
+    "for feature in features:\n",
+    "    print(feature, \":\", format_decimal(ft_min(feature),6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "37ae0711",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MIN :\n",
+      "\n",
+      "Index : 1599.000000\n",
+      "Arithmancy : 104956.000000\n",
+      "Astronomy : 1016.211940\n",
+      "Herbology : 11.612895\n",
+      "Defense Against the Dark Arts : 9.667405\n",
+      "Divination : 10.032000\n",
+      "Muggle Studies : 1092.388611\n",
+      "Ancient Runes : 745.396220\n",
+      "History of Magic : 11.889713\n",
+      "Transfiguration : 1098.958201\n",
+      "Potions : 13.536762\n",
+      "Care of Magical Creatures : 3.056546\n",
+      "Charms : -225.428140\n",
+      "Flying : 279.070000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ft_max(feature : str) -> float:\n",
+    "    max = np.nan\n",
+    "    for i in df[feature].dropna():\n",
+    "        max = max if i < max else i \n",
+    "    return max\n",
+    "\n",
+    "print(\"MAX :\\n\")\n",
+    "for feature in features:\n",
+    "    print(feature, \":\", format_decimal(ft_max(feature),6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d74a387e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentiles (25, 50, 75) :\n",
+      "\n",
+      "Index : 400.000000\n",
+      "Index : 800.000000\n",
+      "Index : 1200.000000\n",
+      "Arithmancy : 38510.000000\n",
+      "Arithmancy : 49018.000000\n",
+      "Arithmancy : 60828.000000\n",
+      "Astronomy : -489.493777\n",
+      "Astronomy : 261.644731\n",
+      "Astronomy : 525.909540\n",
+      "Herbology : -4.312118\n",
+      "Herbology : 3.469012\n",
+      "Herbology : 5.421046\n",
+      "Defense Against the Dark Arts : -5.259095\n",
+      "Defense Against the Dark Arts : -2.589342\n",
+      "Defense Against the Dark Arts : 4.904680\n",
+      "Divination : 3.099000\n",
+      "Divination : 4.624000\n",
+      "Divination : 5.667000\n",
+      "Muggle Studies : -577.580096\n",
+      "Muggle Studies : -419.164294\n",
+      "Muggle Studies : 254.994857\n",
+      "Ancient Runes : 397.511047\n",
+      "Ancient Runes : 463.918305\n",
+      "Ancient Runes : 597.492230\n",
+      "History of Magic : 2.218653\n",
+      "History of Magic : 4.378176\n",
+      "History of Magic : 5.825242\n",
+      "Transfiguration : 1026.171713\n",
+      "Transfiguration : 1045.533335\n",
+      "Transfiguration : 1058.445388\n",
+      "Potions : 3.644900\n",
+      "Potions : 5.877582\n",
+      "Potions : 8.248789\n",
+      "Care of Magical Creatures : -0.670996\n",
+      "Care of Magical Creatures : -0.043296\n",
+      "Care of Magical Creatures : 0.594446\n",
+      "Charms : -250.647270\n",
+      "Charms : -244.867510\n",
+      "Charms : -232.536750\n",
+      "Flying : -41.840000\n",
+      "Flying : -2.510000\n",
+      "Flying : 50.890000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def percentiles(feature : str, percent) -> float:\n",
+    "    arr = np.array(df[feature].dropna())\n",
+    "    arr.sort()\n",
+    "    l = count(feature)/100\n",
+    "    return arr[int(percent * l)]\n",
+    "\n",
+    "print(\"Percentiles (25, 50, 75) :\\n\")\n",
+    "for feature in features:\n",
+    "    print(feature, \":\", format_decimal(percentiles(feature, 25),6))\n",
+    "    print(feature, \":\", format_decimal(percentiles(feature, 50),6))\n",
+    "    print(feature, \":\", format_decimal(percentiles(feature, 75),6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ce1254cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Index    Arithmancy    Astronomy    Herbology    Defense Against the Dark Arts    Divination    Muggle Studies    Ancient Runes    History of Magic    Transfiguration     Potions    Care of Magical Creatures      Charms     Flying\n",
+      "--------  ------------  -----------  -----------  -------------------------------  ------------  ----------------  ---------------  ------------------  -----------------  ----------  ---------------------------  ----------  ---------\n",
+      "1600            1566      1568        1567                            1569           1561                1565             1565              1557                1566       1570                       1560          1600        1600\n",
+      " 799.5         49634.6      39.7971      1.14102                        -0.387863       3.15391          -224.59           495.748             2.96309          1030.1        5.95037                   -0.0534271  -243.374      21.958\n",
+      " 462.025       16679.8     520.298       5.21968                         5.21279        4.1553            486.345          106.285             4.42577            44.1251     3.14785                    0.971457      8.78364    97.6316\n",
+      "   0          -24370      -966.741     -10.2957                        -10.1621        -8.727           -1086.5            283.87             -8.85899           906.627     -4.69748                   -3.31368    -261.049    -181.47\n",
+      "1599          104956      1016.21       11.6129                          9.66741       10.032            1092.39           745.396            11.8897           1098.96      13.5368                     3.05655    -225.428     279.07\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tabulate import tabulate\n",
+    "func_list = [count, mean, std, ft_min, ft_max]\n",
+    "rows = []\n",
+    "for func in func_list:\n",
+    "    rows.append(list(map(func, features)))\n",
+    "\n",
+    "print(tabulate(rows, headers=features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f36f607",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
