part 1 and 2 moved from notebook to python files

--- a/DSLR.ipynb
+++ b/DSLR.ipynb
@@ -2054,9 +2054,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31647ba0",
+   "metadata": {},
+   "source": [
+    "# V.3 Logistic regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad34cef1",
+   "id": "a65ca07f",
    "metadata": {},
    "outputs": [],
    "source": []
