finish work on notebook. Added global precision metric + add export to csv for predictions

--- a/notebook/DataCleaning.ipynb
+++ b/notebook/DataCleaning.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7494b664",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -59,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f1c9f02d",
    "metadata": {},
    "outputs": [],
@@ -71,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5209034b",
    "metadata": {},
    "outputs": [],
@@ -113,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1be50c9d",
    "metadata": {},
    "outputs": [],
@@ -136,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b25a2097",
    "metadata": {},
    "outputs": [],
@@ -164,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3f025227",
    "metadata": {},
    "outputs": [],
@@ -793,18 +781,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7b33b206",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "List of Columns we are goinf to use:\n",
-      " ['Hogwarts House', 'Astronomy', 'Herbology', 'Defense Against the Dark Arts', 'Divination', 'Muggle Studies', 'Ancient Runes', 'History of Magic', 'Transfiguration', 'Charms', 'Flying']\n",
-      "List of Columns we are goinf to use:\n",
-      " ['Hogwarts House', 'Astronomy', 'Herbology', 'Defense Against the Dark Arts', 'Divination', 'Muggle Studies', 'Ancient Runes', 'History of Magic', 'Transfiguration', 'Charms', 'Flying']\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 9\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# The pair plot we saw before showed us that some variables have a histogram with almost\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# all similar traits within the same House. We will drop them.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m columns_to_drop\u001b[38;5;241m.\u001b[39mextend([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mArithmancy\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCare of Magical Creatures\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPotions\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 9\u001b[0m df_train \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdrop(columns \u001b[38;5;241m=\u001b[39m columns_to_drop)\n\u001b[1;32m     10\u001b[0m column_names \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(df_train\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mvalues)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mList of Columns we are goinf to use:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, column_names)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -1869,13 +1858,374 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6febcd89",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load\n",
     "test = pd.read_csv('../datasets/dataset_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5197b924",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>Hogwarts House</th>\n",
+       "      <th>First Name</th>\n",
+       "      <th>Last Name</th>\n",
+       "      <th>Birthday</th>\n",
+       "      <th>Best Hand</th>\n",
+       "      <th>Arithmancy</th>\n",
+       "      <th>Astronomy</th>\n",
+       "      <th>Herbology</th>\n",
+       "      <th>Defense Against the Dark Arts</th>\n",
+       "      <th>Divination</th>\n",
+       "      <th>Muggle Studies</th>\n",
+       "      <th>Ancient Runes</th>\n",
+       "      <th>History of Magic</th>\n",
+       "      <th>Transfiguration</th>\n",
+       "      <th>Potions</th>\n",
+       "      <th>Care of Magical Creatures</th>\n",
+       "      <th>Charms</th>\n",
+       "      <th>Flying</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rico</td>\n",
+       "      <td>Sargent</td>\n",
+       "      <td>2001-10-06</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>41642.0</td>\n",
+       "      <td>696.096071</td>\n",
+       "      <td>3.020172</td>\n",
+       "      <td>-6.960961</td>\n",
+       "      <td>7.996</td>\n",
+       "      <td>-365.151850</td>\n",
+       "      <td>393.138185</td>\n",
+       "      <td>4.207691</td>\n",
+       "      <td>1046.742736</td>\n",
+       "      <td>3.668983</td>\n",
+       "      <td>0.373853</td>\n",
+       "      <td>-244.48172</td>\n",
+       "      <td>-13.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tamara</td>\n",
+       "      <td>Shackelford</td>\n",
+       "      <td>1998-01-08</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>45352.0</td>\n",
+       "      <td>-370.844655</td>\n",
+       "      <td>2.965226</td>\n",
+       "      <td>3.708447</td>\n",
+       "      <td>6.349</td>\n",
+       "      <td>522.580486</td>\n",
+       "      <td>602.853051</td>\n",
+       "      <td>6.460017</td>\n",
+       "      <td>1048.053878</td>\n",
+       "      <td>8.514622</td>\n",
+       "      <td>0.577432</td>\n",
+       "      <td>-231.29200</td>\n",
+       "      <td>-26.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Staci</td>\n",
+       "      <td>Crandall</td>\n",
+       "      <td>1998-09-15</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>43502.0</td>\n",
+       "      <td>320.303990</td>\n",
+       "      <td>-6.185697</td>\n",
+       "      <td>-3.203040</td>\n",
+       "      <td>4.619</td>\n",
+       "      <td>-630.073207</td>\n",
+       "      <td>588.071795</td>\n",
+       "      <td>-5.565818</td>\n",
+       "      <td>936.437358</td>\n",
+       "      <td>1.850829</td>\n",
+       "      <td>-1.647150</td>\n",
+       "      <td>-252.99343</td>\n",
+       "      <td>200.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Dee</td>\n",
+       "      <td>Gavin</td>\n",
+       "      <td>2001-05-10</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>61831.0</td>\n",
+       "      <td>407.202928</td>\n",
+       "      <td>4.962442</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-449.179806</td>\n",
+       "      <td>427.699966</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1043.397718</td>\n",
+       "      <td>4.656573</td>\n",
+       "      <td>1.164708</td>\n",
+       "      <td>-244.01660</td>\n",
+       "      <td>-11.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gregory</td>\n",
+       "      <td>Gustafson</td>\n",
+       "      <td>1999-02-01</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>288.337747</td>\n",
+       "      <td>3.737656</td>\n",
+       "      <td>-2.883377</td>\n",
+       "      <td>4.886</td>\n",
+       "      <td>-449.732166</td>\n",
+       "      <td>385.712782</td>\n",
+       "      <td>2.876347</td>\n",
+       "      <td>1051.377936</td>\n",
+       "      <td>2.750586</td>\n",
+       "      <td>0.102104</td>\n",
+       "      <td>-243.99806</td>\n",
+       "      <td>-7.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>395</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>Kidwell</td>\n",
+       "      <td>1999-02-06</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>45857.0</td>\n",
+       "      <td>-554.181932</td>\n",
+       "      <td>-5.647655</td>\n",
+       "      <td>5.541819</td>\n",
+       "      <td>-3.799</td>\n",
+       "      <td>-591.764651</td>\n",
+       "      <td>392.973420</td>\n",
+       "      <td>7.048482</td>\n",
+       "      <td>1047.648405</td>\n",
+       "      <td>10.408749</td>\n",
+       "      <td>1.882786</td>\n",
+       "      <td>-248.39978</td>\n",
+       "      <td>-94.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>396</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Frederic</td>\n",
+       "      <td>Koonce</td>\n",
+       "      <td>1997-11-11</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>51842.0</td>\n",
+       "      <td>632.233530</td>\n",
+       "      <td>6.754862</td>\n",
+       "      <td>-6.322335</td>\n",
+       "      <td>3.294</td>\n",
+       "      <td>-221.848397</td>\n",
+       "      <td>319.360250</td>\n",
+       "      <td>3.921402</td>\n",
+       "      <td>1035.681313</td>\n",
+       "      <td>-0.169741</td>\n",
+       "      <td>-1.074303</td>\n",
+       "      <td>-246.87982</td>\n",
+       "      <td>-15.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>397</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Eugene</td>\n",
+       "      <td>Peralta</td>\n",
+       "      <td>1998-11-14</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>61982.0</td>\n",
+       "      <td>292.108738</td>\n",
+       "      <td>5.234530</td>\n",
+       "      <td>-2.921087</td>\n",
+       "      <td>4.230</td>\n",
+       "      <td>-787.036050</td>\n",
+       "      <td>433.259967</td>\n",
+       "      <td>3.898160</td>\n",
+       "      <td>1069.794110</td>\n",
+       "      <td>6.495579</td>\n",
+       "      <td>-2.286537</td>\n",
+       "      <td>-244.01333</td>\n",
+       "      <td>1.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>398</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Allan</td>\n",
+       "      <td>Bentley</td>\n",
+       "      <td>1998-10-13</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>56020.0</td>\n",
+       "      <td>-726.418553</td>\n",
+       "      <td>6.735582</td>\n",
+       "      <td>7.264186</td>\n",
+       "      <td>3.908</td>\n",
+       "      <td>511.960762</td>\n",
+       "      <td>613.391514</td>\n",
+       "      <td>7.244499</td>\n",
+       "      <td>1042.058804</td>\n",
+       "      <td>7.554259</td>\n",
+       "      <td>-0.788817</td>\n",
+       "      <td>-228.24290</td>\n",
+       "      <td>-18.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>399</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Clarence</td>\n",
+       "      <td>Pope</td>\n",
+       "      <td>1999-07-26</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>46452.0</td>\n",
+       "      <td>-735.939727</td>\n",
+       "      <td>7.224872</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.889</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>513.457470</td>\n",
+       "      <td>3.095942</td>\n",
+       "      <td>1035.331589</td>\n",
+       "      <td>0.477165</td>\n",
+       "      <td>0.975627</td>\n",
+       "      <td>-230.70067</td>\n",
+       "      <td>-8.78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>400 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Index  Hogwarts House First Name    Last Name    Birthday Best Hand  \\\n",
+       "0        0             NaN       Rico      Sargent  2001-10-06     Right   \n",
+       "1        1             NaN     Tamara  Shackelford  1998-01-08      Left   \n",
+       "2        2             NaN      Staci     Crandall  1998-09-15      Left   \n",
+       "3        3             NaN        Dee        Gavin  2001-05-10     Right   \n",
+       "4        4             NaN    Gregory    Gustafson  1999-02-01     Right   \n",
+       "..     ...             ...        ...          ...         ...       ...   \n",
+       "395    395             NaN      Maria      Kidwell  1999-02-06      Left   \n",
+       "396    396             NaN   Frederic       Koonce  1997-11-11      Left   \n",
+       "397    397             NaN     Eugene      Peralta  1998-11-14     Right   \n",
+       "398    398             NaN      Allan      Bentley  1998-10-13      Left   \n",
+       "399    399             NaN   Clarence         Pope  1999-07-26      Left   \n",
+       "\n",
+       "     Arithmancy   Astronomy  Herbology  Defense Against the Dark Arts  \\\n",
+       "0       41642.0  696.096071   3.020172                      -6.960961   \n",
+       "1       45352.0 -370.844655   2.965226                       3.708447   \n",
+       "2       43502.0  320.303990  -6.185697                      -3.203040   \n",
+       "3       61831.0  407.202928   4.962442                            NaN   \n",
+       "4           NaN  288.337747   3.737656                      -2.883377   \n",
+       "..          ...         ...        ...                            ...   \n",
+       "395     45857.0 -554.181932  -5.647655                       5.541819   \n",
+       "396     51842.0  632.233530   6.754862                      -6.322335   \n",
+       "397     61982.0  292.108738   5.234530                      -2.921087   \n",
+       "398     56020.0 -726.418553   6.735582                       7.264186   \n",
+       "399     46452.0 -735.939727   7.224872                            NaN   \n",
+       "\n",
+       "     Divination  Muggle Studies  Ancient Runes  History of Magic  \\\n",
+       "0         7.996     -365.151850     393.138185          4.207691   \n",
+       "1         6.349      522.580486     602.853051          6.460017   \n",
+       "2         4.619     -630.073207     588.071795         -5.565818   \n",
+       "3           NaN     -449.179806     427.699966               NaN   \n",
+       "4         4.886     -449.732166     385.712782          2.876347   \n",
+       "..          ...             ...            ...               ...   \n",
+       "395      -3.799     -591.764651     392.973420          7.048482   \n",
+       "396       3.294     -221.848397     319.360250          3.921402   \n",
+       "397       4.230     -787.036050     433.259967          3.898160   \n",
+       "398       3.908      511.960762     613.391514          7.244499   \n",
+       "399       2.889             NaN     513.457470          3.095942   \n",
+       "\n",
+       "     Transfiguration    Potions  Care of Magical Creatures     Charms  Flying  \n",
+       "0        1046.742736   3.668983                   0.373853 -244.48172  -13.62  \n",
+       "1        1048.053878   8.514622                   0.577432 -231.29200  -26.26  \n",
+       "2         936.437358   1.850829                  -1.647150 -252.99343  200.15  \n",
+       "3        1043.397718   4.656573                   1.164708 -244.01660  -11.15  \n",
+       "4        1051.377936   2.750586                   0.102104 -243.99806   -7.12  \n",
+       "..               ...        ...                        ...        ...     ...  \n",
+       "395      1047.648405  10.408749                   1.882786 -248.39978  -94.89  \n",
+       "396      1035.681313  -0.169741                  -1.074303 -246.87982  -15.53  \n",
+       "397      1069.794110   6.495579                  -2.286537 -244.01333    1.25  \n",
+       "398      1042.058804   7.554259                  -0.788817 -228.24290  -18.27  \n",
+       "399      1035.331589   0.477165                   0.975627 -230.70067   -8.78  \n",
+       "\n",
+       "[400 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
    ]
   },
   {
